--- a/public/styles.less
+++ b/public/styles.less
@@ -62,4 +62,20 @@ body {
         margin-right: auto;
         width: 160px;
     }
+
+    .spinner {
+        animation-name: spin;
+        animation-duration: 500ms;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+    }
+
+    @keyframes spin {
+        from {
+            transform: rotate(0deg);
+        }
+        to {
+            transform: rotate(360deg);
+        }
+    }
 }
