new point colour

--- a/public/styles.less
+++ b/public/styles.less
@@ -29,12 +29,12 @@ body {
     }
 
     .bottom {
-        background-image: url(assets/top_point.png);
+        background-image: url(assets/new_point.png);
         transform: rotate(180deg);
     }
 
     .top {
-        background-image: url(assets/top_point.png);
+        background-image: url(assets/new_point.png);
     }
 
     .piece {
