bearing off works now

--- a/public/styles.less
+++ b/public/styles.less
@@ -8,6 +8,7 @@ body {
         width: 840px;
         padding: 10px;
         border: 5px solid black;
+        background-color: burlywood;
     }
 
     .grid-item {
@@ -29,12 +30,12 @@ body {
     }
 
     .bottom {
-        background-image: url(assets/new_point.png);
+        background-image: url(assets/transparent_point.png);
         transform: rotate(180deg);
     }
 
     .top {
-        background-image: url(assets/new_point.png);
+        background-image: url(assets/transparent_point.png);
     }
 
     .piece {
