--- a/public/styles.less
+++ b/public/styles.less
@@ -1,5 +1,28 @@
 body {
     font-family: Lato;
+    background-color: #2E3440;
+    color: #ECEFF4;
+
+    a {
+        text-decoration: none;
+        color: inherit;
+    }
+
+    #back {
+        position: fixed;
+        bottom: 1em;
+        left: 1em;
+        color: inherit;
+        font-size: 2em;
+    }
+
+    .fa-github {
+        position: fixed;
+        bottom: 0.5em;
+        right: 1em;
+        color: inherit;
+        font-size: 2.5em;
+      }
 
     .grid-container {
         display: grid;
@@ -8,7 +31,8 @@ body {
         width: 840px;
         padding: 10px;
         border: 5px solid black;
-        background-color: burlywood;
+        background-color: #4C566A;
+        margin: 0 auto;
     }
 
     .grid-item {
@@ -25,7 +49,7 @@ body {
         height: 245px;
     }
 
-    #blue-jail, #red-bear {
+    #Green-jail, #red-bear {
         margin-top: 5px;
     }
 
@@ -38,12 +62,30 @@ body {
         background-image: url(assets/transparent_point.png);
     }
 
+    .topwhite {
+        background-image: url(assets/whitepoint.png);
+    }
+
+    .bottomwhite {
+        background-image: url(assets/whitepoint.png);
+        transform: rotate(180deg);
+    }
+    
+    .topclear {
+        background-image: url(assets/clearpoint.png);
+    }
+
+    .bottomclear {
+        background-image: url(assets/clearpoint.png);
+        transform: rotate(180deg);
+    }
+
     .piece {
         width: 45px;
         height: 45px;
     }
 
-    #blue-jail {
+    #Green-jail {
         transform: rotate(180deg);
     }
 
@@ -55,6 +97,8 @@ body {
     #dice-display {
         width: 870px;
         margin-top: 10px;
+        margin: 1em auto;
+        text-align: center;
     }
 
     #dice-wrapper {
