--- a/public/styles.less
+++ b/public/styles.less
@@ -49,7 +49,7 @@ body {
         height: 245px;
     }
 
-    #Green-jail, #red-bear {
+    #Green-jail, #Purple-bear {
         margin-top: 5px;
     }
 
